samples/_failures_safe/1761332731_739c28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c521b45.c: In function ‘main’:
./samples/SAFE/__tmp_4c521b45.c:148:5: error: expected declaration or statement at end of input
  148 |     init_matrix(&mat2);
      |     ^~~~~~~~~~~
